<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <View
        android:id="@+id/limit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/defaultMargin"
        android:background="@drawable/background" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/titleSize"
        android:background="@color/backgroundColor"
        android:paddingHorizontal="@dimen/defaultMargin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bigMargin"
        android:gravity="center"
        android:text="@string/nameLabel"
        android:padding="@dimen/smallMargin"
        app:layout_constraintStart_toStartOf="@+id/limit"
        app:layout_constraintEnd_toEndOf="@id/limit"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/name"
        android:maxLines="1"
        android:textColor="@color/textTyped"
        android:layout_marginHorizontal="@dimen/defaultMargin"
        app:layout_constraintStart_toStartOf="@+id/limit"
        app:layout_constraintEnd_toEndOf="@id/limit"
        app:layout_constraintTop_toBottomOf="@id/nameLabel"/>

    <TextView
        android:id="@+id/passportLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bigMargin"
        android:gravity="center"
        android:text="@string/passportLabel"
        android:padding="@dimen/smallMargin"
        app:layout_constraintStart_toStartOf="@+id/limit"
        app:layout_constraintEnd_toEndOf="@id/limit"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/passport"
        android:textColor="@color/textTyped"
        android:layout_marginHorizontal="@dimen/defaultMargin"
        app:layout_constraintStart_toStartOf="@+id/limit"
        app:layout_constraintEnd_toEndOf="@id/limit"
        app:layout_constraintTop_toBottomOf="@id/passportLabel"
        android:autofillHints="XXXXX-XXXX"
        android:inputType="text" />

    <TextView
        android:id="@+id/purposeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bigMargin"
        android:gravity="center"
        android:text="@string/purposeLabel"
        android:layout_marginStart="@dimen/defaultMargin"
        app:layout_constraintStart_toStartOf="@+id/limit"
        app:layout_constraintTop_toBottomOf="@id/passport" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/purpose"
        android:textColor="@color/textTyped"
        android:layout_marginHorizontal="@dimen/defaultMargin"
        app:layout_constraintStart_toEndOf="@+id/purposeLabel"
        app:layout_constraintEnd_toEndOf="@id/limit"
        app:layout_constraintTop_toTopOf="@id/purposeLabel"
        android:autofillHints="Trabalho ou Estudo"
        android:inputType="text" />

    <TextView
        android:id="@+id/durationLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/smallMargin"
        android:text="@string/durationLabel"
        android:layout_marginStart="@dimen/defaultMargin"
        app:layout_constraintStart_toStartOf="@+id/limit"
        app:layout_constraintTop_toBottomOf="@id/purpose" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/duration"
        android:textColor="@color/textTyped"
        android:layout_marginHorizontal="@dimen/defaultMargin"
        app:layout_constraintStart_toEndOf="@+id/durationLabel"
        app:layout_constraintEnd_toEndOf="@id/limit"
        app:layout_constraintTop_toTopOf="@id/durationLabel"
        android:text="0"
        android:inputType="number" />

    <Button
        android:id="@+id/confirmationButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:text="@string/confirmationButton"
        android:layout_marginHorizontal="@dimen/bigMargin"
        android:layout_marginTop="@dimen/defaultMargin"
        app:layout_constraintTop_toBottomOf="@id/duration"
        app:layout_constraintStart_toStartOf="@id/limit"
        app:layout_constraintEnd_toEndOf="@id/limit"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/denied"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti distinctio expedita ipsam molestias nulla odio quod, quos reiciendis reprehenderit tempore? Ad assumenda commodi ea molestias nam repellendus similique."
        app:layout_constraintTop_toBottomOf="@id/confirmationButton"
        app:layout_constraintStart_toStartOf="@id/limit"
        app:layout_constraintEnd_toEndOf="@id/limit"
        android:gravity="center"
        android:layout_margin="@dimen/defaultMargin"/>

</androidx.constraintlayout.widget.ConstraintLayout>